tests/macros/rawlist/extension.stderr
error: option `extension` does not exist for kind `rawlist`
 --> $DIR/extension.rs:2:47
  |
2 |     let q = inquisition::questions![rawlist { extension: todo!() }];
  |                                               ^^^^^^^^^
