tests/macros/rawlist/extension.rs
fn main() {
    let q = inquisition::questions![rawlist { extension: todo!() }];
}
